--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,9 @@ jobs:
         python-version: "3.12.2"
     - name: Install dependencies
       run: |
+        cd python
         python -m pip install --upgrade pip
-        if [ -f python/requirements.txt ]; then pip install -r python/requirements.txt; fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
         pytest --cov=invariant -s -vv
