--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "publish" ]
 
 jobs:
   pypi-publish:
@@ -35,10 +35,7 @@ jobs:
           cd python
           poetry build
 
-      - name: Move distribution files
-        run: |
-          cd python
-          mv dist/* ../dist
-
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: python/dist
