--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -8,3 +8,12 @@ theme:
 extra_css:
   - assets/invariant.css
 use_directory_urls: false
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
