--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -7,14 +7,18 @@ readme = "README.md"
 packages = [{ include = "invariant_sdk" }]
 
 [tool.poetry.dependencies]
-python = ">= 3.10"
+python = ">=3.10"
 pydantic = "^2.9.2"
 requests = "^2.32.3"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 pytest-cov = "^5.0.0"
+pytest-asyncio = "^0.25.3"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
