--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 packages = [{ include = "invariant_sdk" }]
 
 [tool.poetry.dependencies]
+httpx = "^0.28.1"
 python = ">=3.10"
 pydantic = "^2.9.2"
 requests = "^2.32.3"
