--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,9 +6,37 @@ on:
       - 'v*'
 
 jobs:
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest    
+
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Python 3.12.2
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.12.2"
+      
+      - name: Setup dependencies
+        run: |
+          cd python
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install --with dev
+
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/python" >> $GITHUB_ENV
+
+      - name: Run tests
+        run: |
+          cd python
+          poetry run pytest --cov=invariant_sdk -s -vv
+
   pypi-publish:
     name: Upload release to PyPI
     runs-on: ubuntu-latest    
+    needs: test  # Ensures the test job runs first and must pass before publishing
     environment: pypi-package
 
     steps:
