--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,35 +1,29 @@
 name: Publish to PyPI
 
 on:
-  workflow_run:
-    workflows:
-      - Invariant SDK CI
-    types:
-      - completed
-    branches:
-      - v*
-
+  workflow_dispatch:
 
 jobs:
   pypi-publish:
+    name: Upload release to PyPI
     runs-on: ubuntu-latest
     environment: pypi-package
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref_type == 'tag' }}
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python 3.12.2
         uses: actions/setup-python@v3
         with:
           python-version: "3.12.2"
-      
+
       - name: Setup dependencies
         run: |
           cd python
           python -m pip install --upgrade pip
           pip install poetry
           poetry install --with dev
-      
+
       - name: Set PYTHONPATH
         run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/python" >> $GITHUB_ENV
 
