--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install poetry
           poetry install --with dev
+    
+      # TODO: Run some tests here which use the dist/*.whl file.
 
       - name: Set PYTHONPATH
         run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/python" >> $GITHUB_ENV
